--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,7 @@ Copyright = "All rights reserved - 2015"
   logo = "images/me.jpg"
   bio = "Technically adventurous with a mix of geek, gamer and coder. Loves Linux but uses Mac, disses Windows but can fix it and believes the Terminal is a way of life. Proud fan of Arsenal."
   googleAnalyticsUserID = "UA-33991385-1"
+  email = "a@abiosoft.com"
   twitter = "//twitter.com/abiosoft"
   facebook = "//facebook.com/abiosoft"
   github = "//github.com/abiosoft"
