--- a/config.toml
+++ b/config.toml
@@ -2,24 +2,22 @@ baseurl = "/"
 languageCode = "en-us"
 title = "Abiola Ibrahim"
 theme = "casper"
-destination = "/Users/abiola/appengineapps/abiosoft/public"
 paginate = 10
 DisqusShortname = "abiosoft"
-Copyright = "All rights reserved - 2016"
+Copyright = "All rights reserved - 2020"
 
 [params]
-  description = "Software Craftsman"
+  subtitle = "Software Craftsman"
   cover = "images/cover.png"
   author = "Abiola Ibrahim"
-  logo = "images/me.jpg"
-  bio = "Technically adventurous with a mix of geek, gamer and coder. Loves Linux but uses Mac, disses Windows but can fix it and believes the Terminal is a way of life. Proud fan of Arsenal."
+  bio = "Technically adventurous with a mix of geek, gamer and coder"
   googleAnalyticsUserID = "UA-70866902-1"
   email = "a@abiosoft.com"
   twitter = "//twitter.com/abiosoft"
   facebook = "//facebook.com/abiosoft"
   github = "//github.com/abiosoft"
   linkedin = "//ng.linkedin.com/in/abiosoft"
-  hobbies = "Go, Rust, Dart, Vim, Linux, Containers"
+  hobbies = "coding in Go, coding in Typescript, coding with Vim, toying with Caddy, building with Containers"
   hobbytext = "I like"
 [permalinks]
   post = "/:slug/"
