add tags to nav
Signed-off-by: Abiola Ibrahim <git@abiosoft.com>

--- a/config.toml
+++ b/config.toml
@@ -62,6 +62,10 @@ name = "posts"
 url = "/posts"
 
 [[params.menu]]
+name = "tags"
+url = "/tags"
+
+[[params.menu]]
 name = "about"
 url = "/about"
 
