general: update meta descriptions
Signed-off-by: Abiola Ibrahim <git@abiosoft.com>

--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ tag = 'tags'
 [params]
 
 # Meta description
-description = "software craftsman"
+description = "software craftsman, husband, father"
 
 # Appearance settings
 theme = 'auto'
