config: enable robots.txt
Signed-off-by: Abiola Ibrahim <git@abiosoft.com>

--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 title = "Abiola Ibrahim"
 theme = "typo"
 paginate = 10
+enableRobotsTXT = true
 
 [taxonomies]
 tag = 'tags'
